--- a/AnyoneCanFish/app/build.gradle
+++ b/AnyoneCanFish/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
     implementation 'com.google.firebase:firebase-core:16.0.5'
     implementation 'com.firebaseui:firebase-ui-auth:4.1.0'
+    implementation 'com.google.firebase:firebase-firestore:17.1.3'
 
     //Trying to figure out this library version problem...
     implementation 'com.google.android.gms:play-services-flags:16.0.1'
