--- a/AnyoneCanFish/app/build.gradle
+++ b/AnyoneCanFish/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     //Trying to figure out this library version problem...
     implementation 'com.google.android.gms:play-services-flags:16.0.1'
 
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
