--- a/AnyoneCanFish/app/build.gradle
+++ b/AnyoneCanFish/app/build.gradle
@@ -21,20 +21,29 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    //Need to specifically set some libraries to use 28.0.0, because of warnings {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:customtabs:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
-    implementation 'com.android.support:support-media-compat:28.0.0'
+    implementation 'com.android.support:support-media-compat:28.0.0'        // }
+
+    //decent way to organize layouts
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
+    //Google play: location, maps
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
+
+    //firebase, firebaseUI, firestore
     implementation 'com.google.firebase:firebase-core:16.0.5'
     implementation 'com.firebaseui:firebase-ui-auth:4.1.0'
     implementation 'com.google.firebase:firebase-firestore:17.1.3'
+//    implementation 'com.google.firebase:firebase-storage:16.0.5'
 
     //Trying to figure out this library version problem...
     implementation 'com.google.android.gms:play-services-flags:16.0.1'
 
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
