--- a/AnyoneCanFish/app/src/main/AndroidManifest.xml
+++ b/AnyoneCanFish/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
     -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <!-- Needed only if your app targets Android 5.0 (API level 21) or higher. -->
+    <uses-feature android:name="android.hardware.location.gps" />
+    <uses-feature android:name="android.hardware.location.network" />
 
     <application
         android:allowBackup="true"
@@ -45,6 +48,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Services -->
+        <service android:name=".services.LocationService" android:exported="false" />
+        <service android:name=".services.FirebaseService" android:exported="false" />
+        <service android:name=".services.WeatherService" android:exported="false" />
+        <service android:name=".services.SunMoonService" android:exported="false" />
+
     </application>
 
 </manifest>
