--- a/AnyoneCanFish/app/src/main/AndroidManifest.xml
+++ b/AnyoneCanFish/app/src/main/AndroidManifest.xml
@@ -40,7 +40,6 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -51,8 +50,8 @@
 
         <!-- Services -->
         <service android:name=".services.LocationService" android:exported="false" />
+        <service android:name=".services.WeatherInfoService" android:exported="false" />
         <!--<service android:name=".services.FirebaseService" android:exported="false" />-->
-        <!--<service android:name=".services.WeatherService" android:exported="false" />-->
         <!--<service android:name=".services.SunMoonService" android:exported="false" />-->
 
     </application>
