--- a/AnyoneCanFish/app/build.gradle
+++ b/AnyoneCanFish/app/build.gradle
@@ -41,6 +41,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:17.1.3'
 //    implementation 'com.google.firebase:firebase-storage:16.0.5'
 
+    //picasso for image loading
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
     //Trying to figure out this library version problem...
     implementation 'com.google.android.gms:play-services-flags:16.0.1'
 
