--- a/AnyoneCanFish/app/src/main/AndroidManifest.xml
+++ b/AnyoneCanFish/app/src/main/AndroidManifest.xml
@@ -15,9 +15,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/fish_icon_001"
+        android:roundIcon="@drawable/fish_icon_001"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
@@ -43,17 +43,57 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+                <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <!-- Services -->
-        <service android:name=".services.LocationService" android:exported="false" />
-        <service android:name=".services.WeatherInfoService" android:exported="false" />
-        <!--<service android:name=".services.FirebaseService" android:exported="false" />-->
-        <!--<service android:name=".services.SunMoonService" android:exported="false" />-->
+        <service
+            android:name=".services.LocationService"
+            android:exported="false" />
+        <service
+            android:name=".services.WeatherInfoService"
+            android:exported="false" />
+        <!-- <service android:name=".services.FirebaseService" android:exported="false" /> -->
+        <!-- <service android:name=".services.SunMoonService" android:exported="false" /> -->
 
+        <activity
+            android:name=".GameFishActivity"
+            android:label="@string/title_activity_game_fish"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.homebrewforlife.sharkydart.anyonecanfish.MainActivity" />
+        </activity>
+        <activity
+            android:name=".FishingBasicsActivity"
+            android:label="@string/title_activity_fishing_basics"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.homebrewforlife.sharkydart.anyonecanfish.MainActivity" />
+        </activity>
+        <activity
+            android:name=".FishingTripsActivity"
+            android:label="@string/title_activity_fishing_trips"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.homebrewforlife.sharkydart.anyonecanfish.MainActivity" />
+        </activity>
+        <activity
+            android:name=".TackleBoxesActivity"
+            android:label="@string/title_activity_tackle_boxes"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.homebrewforlife.sharkydart.anyonecanfish.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
