--- a/AnyoneCanFish/app/src/main/AndroidManifest.xml
+++ b/AnyoneCanFish/app/src/main/AndroidManifest.xml
@@ -16,8 +16,8 @@
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
-        android:icon="@drawable/fish_icon_001"
-        android:roundIcon="@drawable/fish_icon_001"
+        android:icon="@drawable/fish_circle_002"
+        android:roundIcon="@drawable/fish_circle_002"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
@@ -32,6 +32,9 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
 
         <activity android:name=".MapsActivity">
             <intent-filter>
