1) need to troubleshoot firestore "collection" ".get()" : -tackleboxes -trips *** - possibly due to object data not matching database data
2) NETWORKING/API: need to create service/receiver for calling Solunar Data API
- should be straightforward based on the schema working for the others

--- a/AnyoneCanFish/app/src/main/AndroidManifest.xml
+++ b/AnyoneCanFish/app/src/main/AndroidManifest.xml
@@ -60,6 +60,9 @@
         <service
             android:name=".services.WeatherInfoService"
             android:exported="false" />
+        <service
+            android:name=".services.GetForecastDataService"
+            android:exported="false" />
         <!-- <service android:name=".services.FirebaseService" android:exported="false" /> -->
         <!-- <service android:name=".services.SunMoonService" android:exported="false" /> -->
 
