Firestore: - need to establish the code for allowing objects to be added, updated, deleted 1. Trips 2. FishEvents
2) NETWORKING/API:
 1. need to create service/receiver for calling Solunar Data API
  - should be straightforward based on the schema working for the others
 2. need to map data to views for solunar data

3. Widget:
 - need to make one that shows:
  - "fishing outlook"
  - allows FishEvent to be created

--- a/AnyoneCanFish/app/src/main/AndroidManifest.xml
+++ b/AnyoneCanFish/app/src/main/AndroidManifest.xml
@@ -69,6 +69,7 @@
         <activity
             android:name=".GameFishActivity"
             android:label="@string/title_activity_game_fish"
+            android:configChanges="orientation|screenSize"
             android:parentActivityName=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
