had to specifically add a cert for the solunar api, due to it being self-signed
------------------------------------------------------------------------
Firestore:
- need to establish the code for allowing objects to be added, updated, deleted
1. Trips
2. FishEvents

2) NETWORKING/API:
 1. need to create service/receiver for calling Solunar Data API
  - should be straightforward based on the schema working for the others
 2. need to map data to views for solunar data

3. Widget:
 - need to make one that shows:
  - "fishing outlook"
  - allows FishEvent to be created

--- a/AnyoneCanFish/app/src/main/AndroidManifest.xml
+++ b/AnyoneCanFish/app/src/main/AndroidManifest.xml
@@ -63,8 +63,10 @@
         <service
             android:name=".services.GetForecastDataService"
             android:exported="false" />
+        <service
+            android:name=".services.GetSolunarDataService"
+            android:exported="false" />
         <!-- <service android:name=".services.FirebaseService" android:exported="false" /> -->
-        <!-- <service android:name=".services.SunMoonService" android:exported="false" /> -->
 
         <activity
             android:name=".GameFishActivity"
