--- a/AnyoneCanFish/app/src/main/AndroidManifest.xml
+++ b/AnyoneCanFish/app/src/main/AndroidManifest.xml
@@ -105,6 +105,21 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.homebrewforlife.sharkydart.anyonecanfish.MainActivity" />
         </activity>
+
+        <receiver android:name=".widget.FishingWidgetProvider">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/fishing_widget_info" />
+        </receiver>
+
+        <service
+            android:name=".widget.FishingWidgetRVService"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
+
     </application>
 
 </manifest>
